[package]
name = "ip-utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etherparse = "0.13.0"
socket2 = { version = "0.5.5", features = ["all"] }
pnet = "0.34.0"
libc = "0.2.153"
anyhow = "1.0.79"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "traceroute_poc"
path = "src/bin/traceroute_poc.rs"


[[bin]]
name = "traceroute_poc_raw_socket"
path = "src/bin/traceroute_poc_raw_socket.rs"
